tests/type_alias_direction_bad.stderr
tests/type_alias_direction_bad.sl:8:2: error: SL2015: no matching overload
