tests/type_alias_direction_bad.sl
type MyInt int

fn takesAlias(x MyInt) {
}

fn main() {
    var x int = 1
    takesAlias(x)
}
